--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,27 +26,8 @@
 			<!-- USER IS SIGNED IN -->
 	        
 	          <li class="dropdown">
-	  			   	<a href="#Projects" class="dropdown-toggle" data-toggle="dropdown">
-						Projects
-					<b class="caret"></b></a>
-						
-	  			   	<ul class="dropdown-menu">
-	    	 		  	<li>
-							<%= link_to root_url do %>
-								<i class="icon-list"></i> Entries
-							<% end %>
-						</li>
-	    			  	<li>
-							<%= link_to root_url do %>
-								<i class="icon-calendar"></i> Calendar
-							<% end %>
-						</li>	
-	    			  	<li>
-							<%= link_to root_url do %>
-								<i class="icon-signal"></i> Trends
-							<% end %>
-						</li>
-		         	</ul>
+					<%= link_to "Company", company_path(my_company.id) %>
+
 		        </li> <!-- dropdown -->
 		        <li class="dropdown">
 	  			   	<a href="#Settings" class="dropdown-toggle" data-toggle="dropdown">
