--- a/app/assets/stylesheets/stylesheet1.css
+++ b/app/assets/stylesheets/stylesheet1.css
@@ -187,22 +187,54 @@ th.edit {
   margin-bottom: 0px;
 }
 
-.displayinline {
-	display: inline-block;
+/*Companies CSS:*/
+
+.titleitem {
+  text-decoration: underline;
+  text-align: center;
 }
 
-/*
-.viewselect {
-	text-align: center;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 1px solid #D0D2D5;
-	
-}*/
-/*
-.filterform {
-  display: inline-block;
-  text-align: center;
-  margin-bottom: 10px;
+.datatable {
+  padding: 10px;
+  margin-left: 10px;
+
+/*  border-top: 1px solid #D0D2D5;
+  border-left: 1px solid #D0D2D5;*/
+
+/*	background: #D0D2D5;*/
 }
-*/
+
+.utilization {
+/*	-moz-box-shadow: inset 0 0 5px 5px #888;
+	-webkit-box-shadow: inset 0 0 5px 5px#888;
+	box-shadow: inset 0 0 5px 5px #888;*/
+}
+
+.formfilter {
+  	padding-left: 30px;
+  	padding-top: 10px;
+  	padding-bottom: 10px;
+  
+/*  	border-top: 1px solid #D0D2D5;
+  	border-right: 1px solid #D0D2D5;*/
+
+/*	background: #D0D2D5;*/
+
+	margin-left: 0px;
+}
+
+
+.buttonleft {
+	width: 71px;
+	margin-bottom: 5px;
+}
+
+.viewselect {
+	margin-left: 800px;
+}
+
+.viewdetails {
+	margin-top: -100px;
+}
+
+/*Cmpanies CSS*/
