changes and now merging with Eug

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @company do |c| %>  
 
-	<%= c.input :name %>  	
+	<%= c.input :name, :label => "Company" %>  	
 	<%= c.button :submit %>
 
 <% end %>
