--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Create a Company</h1>
+<div class="container mainpage">
+	<h1>Register your company</h1>
+	<br />
+	<%= render 'form' %>
 
-<%= render 'form' %>
+</div><!-- container, mainpage-->
