--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mainpage">  
   
   <div class="row"> <!-- New Entry -->  
-	  <div class="span12"><%= render :partial => "entries/form" %></div>
+	  <div class="span12 new_entry_form_box"><%= render :partial => "entries/form" %></div>
   </div>
   
   <div class="row"> <!-- Data Table, Feedback, Filter Data -->
