--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,29 +1,37 @@
 <div class="container mainpage">
 
-  <h2><%= @company.name %></h2>
 
-  <br />    
+     <h2>Company: <%= @company.name %></h2>
 
-  <div class="row">
-    <h3 class="offset1 span4" style="text-align: center; text-decoration: underline">All Projects</h3>
-    <h3 class="offset1 span4" style="text-align: center; text-decoration: underline">All Employees</h3>
-  </div>
+     <br />
+            
 
+        <div class="row themecolor">
+          <div id="listFilterProjects" class="offset1 span5"><!-- List Projects -->
+					
+					<%= link_to "+ new project", new_project_path, :remote => true, :class => "popup_dialog btn btn-warning" %>
+                     
+					<br /><br />
 
+					<% @projects.each do |p| %>
+                           <p class="tips" title="<%= p[2] %> total hours">
+                              <%= link_to p[0], project_path(p[3]) %>
+                           </p>
+                    <% end %>
+          </div> <!-- List Projects -->
 
-  <div class="row themecolor">
-    <div id="listFilterProjects" class="offset1 span5"><!-- List Projects -->  
-        <% @projects.each do |p| %>
-          <div class="span2"><p class="tips" title="<%= p[2] %> total hours"><%= link_to p[0], project_path(p[3]) %></p></div>          
-        <% end %>
-    </div> <!-- List Projects -->
+          <div id="listFilterEmployees" class="span5"><!-- List Employees -->  
+                     
+					<%= link_to "+ new employee", new_user_path, :remote => true, :class => "popup_dialog btn btn-warning" %>
+					<br /><br />
+					
+                    <% @employees.each do |u| %>
+                           <p class="tips" title="<%= u[2] %> total hours">
+                              <%= link_to u[0], user_path(u[3]) %>
+                           </p>
+                    <% end %>
+          </div><!-- List Employees -->     
+      </div> <!-- ProjectList Row -->
 
-    <div id="listFilterEmployees" class="span5"><!-- List Employees -->  
-        <% @employees.each do |u| %>
-          <p class="span2 tips" title="<%= u[2] %> total hours"><%= link_to u[0], user_path(u[3]) %></p>
-        <% end %>
-    </div><!-- List Employees -->     
-
-  </div>
-
+     
 </div><!-- container, mainpage-->
