--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,11 +1,10 @@
-<h3>Company: <%= my_company.name %></h3>
-<h3>User: <%= current_user.email %></h3>
+<h3>New Project Form</h3>
 
 <%= simple_form_for @project do |f| %>
 
     <%= f.input :name %>
-    <%= f.input :client, :input_html => { :rows => 2 } %>
-	<%= f.input :budgeted_hrs, :label => 'Budgeted Hours' %>
+    <%= f.input :client, :input_html => { :rows => 2 }, :label => "Description", :placeholder => 'add project details here, like client info' %>
+	<%= f.input :budgeted_hrs, :label => 'Project Hours (budgeted)' %>
     <%= f.hidden_field :company_id, :value => my_company.id %>
 	<%= f.button :submit %>
 
