--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Add Employees</h1>
+<div class="container mainpage">
+	<h1>Create your account</h1>
+	<br />
+	<%= render 'form' %>
 
-<%= render 'form' %>
+</div><!-- container, mainpage-->
