--- a/app/views/entries/_entries_trends.html.erb
+++ b/app/views/entries/_entries_trends.html.erb
@@ -1,6 +1,90 @@
+<% if @is_user_page.to_s == "true" %>
+
+  <div class="span3 borderleft utilization">
+    <fieldset>
+      <legend>Utilization</legend>
+      <div class="row statusbar">
+        <div class="spanhalf"><p>Week</p></div>
+        <div class="span2 progress progress-striped progress-warning tips" 
+              title="<%= @my_week_sum %>/<%= @workhours_week %>"><div class="bar" 
+              style="width: <%= @utilization_week %>;"><p><%= @utilization_week %></p></div></div>
+      </div>
+      <div class="row statusbar">
+        <div class="spanhalf"><p>Month</p></div>
+        <div class="span2 progress progress-striped progress-warning tips" 
+              title="<%= @my_month_sum %>/<%= @workhours_month %>"><div class="bar" 
+              style="width: <%= @utilization_month %>;"><p><%= @utilization_month %></p></div></div>
+      </div>
+      <div class="row statusbar">
+        <div class="spanhalf"><p>Year</p></div>
+        <div class="span2 progress progress-striped progress-warning tips" 
+              title="<%= @my_year_sum %>/<%= @workhours_year %>"><div class="bar" 
+              style="width: <%= @utilization_year %>;"><p><%= @utilization_year %></p></div></div>
+      </div>
+    </fieldset>
+  </div>
 
 
-<table class="table table-bordered table-condensed">
+	<div id="hours_by_project_chart"></div>
+	<script type="text/javascript">
+
+		// Create the data table.
+		var data1 = new google.visualization.DataTable();
+		data1.addColumn('string', 'Project');
+		data1.addColumn('number', 'Hours');
+
+		<% @project_sum_array.each do |e| %>
+		  data1.addRows([
+		  	['<%= e[0] %>',<%= e[1] %>]
+		  ]);
+		<% end %>
+
+
+		// Set chart options
+		var options = {'title':'Hours by Project',
+		               'width':400,
+		               'height':300};
+
+		// Instantiate and draw our chart, passing in some options.
+		var chart = new google.visualization.PieChart(document.getElementById('hours_by_project_chart'));
+		chart.draw(data1, options);
+
+	</script>
+	
+
+	
+<% else %>
+
+	<div id="hours_by_employee_chart"></div>
+	<script type="text/javascript">
+
+		// Create the data table.
+		var data2 = new google.visualization.DataTable();
+		data2.addColumn('string', 'Employee');
+		data2.addColumn('number', 'Hours');
+
+		<% @employee_sum_array.each do |e| %>
+		  data2.addRows([
+		  	['<%= e[0] %>',<%= e[1] %>]
+		  ]);
+		<% end %>
+
+
+		// Set chart options
+		var options = {'title':'Hours by Employee',
+		               'width':400,
+		               'height':300};
+
+		// Instantiate and draw our chart, passing in some options.
+		var chart = new google.visualization.PieChart(document.getElementById('hours_by_employee_chart'));
+		chart.draw(data2, options);
+
+	</script>
+	
+
+<% end %>
+
+<!-- <table class="table table-bordered table-condensed">
   <thead>
     <tr>	
       <th><p>Project</p></th>
@@ -18,7 +102,6 @@
   </tbody>
 </table>
 
-
 <table class="table table-bordered table-condensed">
   <thead>
     <tr>	
@@ -35,4 +118,4 @@
 
 	<% end %>
   </tbody>
-</table>
+</table> -->
