--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,6 @@
       </div>    
     <div class="row"><div class="span2"><%= submit_tag "Filter Data", :name => nil , :class => "btn span2 "%></div></div>  
     </div> <!-- Project List -->
-    
-    
 
 
     <div class="span9 datatable">
@@ -45,7 +43,7 @@
         </div>
       </div> <!-- ViewSelect -->      
   
-  	  <div class="viewdetails"> <!-- View Details -->
+  	  <div class="viewdetailsuser"> <!-- View Details -->
         <div class="selectdetails">
       	  
       	  <div class="span3">
