--- a/app/views/entries/_entries_table.html.erb
+++ b/app/views/entries/_entries_table.html.erb
@@ -47,11 +47,8 @@
 	
 	<!-- TOTAL HOURS ROW -->
 	<tr>	
-      	<th></th>
-		<th></th>
-      	<th></th>
-	    <th><p><%= @hrs_sum %></p></th>
-	    <th></th>
+      	<th colspan="3" style="text-align: left"><p>Total Hours</p></th>
+	      <th colspan="2" style="text-align: left"><p><%= @hrs_sum %></p></th>
     </tr>
   </tbody>
 </table>
