--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,113 +3,124 @@
   <div class="row"> <!-- New Entry -->  
 	  <div class="span12 new_entry_form_box"><%= render :partial => "entries/form" %></div>
   </div>
-
-  
-  <div class="row">
 	
-	<!-- LIST STAFFED EMPLOYEES AND FILTER -->
-	<div class="row">
-		<div class="span4 formfilter">
-     	 <%= form_tag project_path(@project.id), :method => 'get' do %> <!-- Creates the form filter -->      
-      
-	        <div class="row">
-				<div class="span4">
-					<%= submit_tag "Filter Data", :name => nil , :class => "btn span4 "%>
-				</div>
-			</div>
+  <div class="row"> <!-- Data Table, Feedback, Filter Data -->
 
-	        <div class="row"><div class="span4 displayinline">
-	          <label for="startdate">From</label>
-				    <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), 
-								   :class => "span1", :id => "startdate") %>
-	          <label for="enddate">To</label>
-		  		  	<%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), 
-								   :class => "span1", :id => "enddate") %>
-	      	</div></div> <!-- filterform -->
-       
-
-	        <div class="row themecolor"> 
-	          <div id="listFilterProjects" class="span2"><!-- List Employees -->
-					<p>Employees staffed to this project</p>
-				      <%= render 'users/filterlist' %>
-	          </div> <!-- List Employees -->    
-	      	</div> <!-- ProjectList Row -->
-      
-
-	      <% end %>
-	    </div>
+    <%= form_tag project_path(@project.id), :method => 'get' do %> <!-- Creates the form filter -->        
 
 
-    <div class="span7 datatable">
-    
-      <div class="viewselect span7">
+    <div class="span2 projectlist">
+      <div class="row"><!-- List Projects -->
+			  <p class="titleitem span2">Project's Employees</p>
+	      <%= render 'users/filterlist' %>
+      </div>    
+    <div class="row"><div class="spanonefive" style="text-align: center"><%= submit_tag "Filter Data", :name => nil , :class => "btn spanonefive"%></div></div>  
+    </div> <!-- Project List -->
+
+
+    <div class="span9 datatable">
+
+      <div class="viewselect">
         <div data-toggle="buttons-radio">
-
-          <%= link_to "Entries", entrytable_path(:sort => "cal_date", :direction => "desc",
-      											   :myfrom => @myfrom, :myto => @myto, 
-      											   :filter_projects => @filter_projects,
-      											   :filter_employees => @filter_employees, 
-												   :is_user_page => false), 
-      					:remote => true, :id => "EntriesTable_btn", :class => "btn btn-info" %>
-
-      		<%= link_to "Calendar", entrycalendar_path(:sort => "cal_date", :direction => "desc",
-      											   :myfrom => @myfrom, :myto => @myto, 
-      											   :filter_projects => @filter_projects,
-      											   :filter_employees => @filter_employees), 
-      					:remote => true, :id => "EntriesCalendar_btn", :class => "offset1 btn btn-info" %>
-
-
-			<%= link_to "Trends", entrytrends_path(:sort => "cal_date", :direction => "desc",
-      											   :myfrom => @myfrom, :myto => @myto, 
-      											   :filter_projects => @filter_projects,
-      											   :filter_employees => @filter_employees, 
-												   :is_user_page => false), 
-      					:remote => true, :id => "EntriesTrends_btn", :class => "btn btn-info" %>
-
-
-			<%= link_to "Staff", projectstaff_path(:sort => "cal_date", :direction => "desc",
-			      									:myfrom => @myfrom, :myto => @myto, 
-			      									:filter_projects => @filter_projects,
-			      									:filter_employees => @filter_employees), 
-			      		:remote => true, :id => "EntriesTrends_btn", :class => "btn btn-info" %>
-          
-          
+          <%= link_to entrytable_path(:sort => "cal_date", :direction => "desc", :myfrom => @myfrom, :myto => @myto, 
+        			:filter_projects => @filter_projects, :filter_employees => @filter_employees, :is_user_page => true), 
+        			:remote => true, :id => "EntriesTable_btn", :class => "buttonleft btn btn-info" do %>
+        	    <i class="icon-th icon-white"></i> Entries	  
+        	<% end %>
+          <br />
+        	<%= link_to entrycalendar_path(:sort => "cal_date", :direction => "desc", :myfrom => @myfrom, :myto => @myto, 
+					    :filter_projects => @filter_projects, :filter_employees => @filter_employees), 
+        		  :remote => true, :id => "EntriesCalendar_btn", :class => "buttonleft btn btn-info" do %>
+              <i class="icon-calendar icon-white"></i> Calendar
+          <% end %>        		  
+          <br />
+  			  <%= link_to entrytrends_path(:sort => "cal_date", :direction => "desc", :myfrom => @myfrom, :myto => @myto, 
+					    :filter_projects => @filter_projects, :filter_employees => @filter_employees, :is_user_page => false), 
+  					  :remote => true, :id => "EntriesTrends_btn", :class => "buttonleft btn btn-info" do %>
+              <i class="icon-signal icon-white"></i> Trends
+          <% end %>
+          <br />
+  			  <%= link_to projectstaff_path(:sort => "cal_date", :direction => "desc", :myfrom => @myfrom, :myto => @myto, 
+					    :filter_projects => @filter_projects, :filter_employees => @filter_employees), 
+  					  :remote => true, :id => "ProjectStaff_btn", :class => "buttonleft btn btn-info" do %>
+              <i class="icon-user icon-white"></i> Staff
+          <% end %>
         </div>
       </div> <!-- ViewSelect -->      
-      
-             
-	  <div class="span8 details"> <!-- Details -->
 
-      <div class="selectdetails">
-    	  <div id="entrytable_sum">
+  	  <div class="viewdetailsproject"> <!-- View Details -->
+        <div class="selectdetails">
+
+      	  <div class="span4">
+            From: <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), :class => "spanonefive", :id => "startdate") %>
+  			    To: <%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), :class => "spanonefive", :id => "enddate") %>
+        	</div></div> <!-- filterform -->
+        	<div class="spanonefive"><%= submit_tag "Filter Data", :name => nil , :class => "btn spanonefive"%></div>
+      	  <div id="entrytable_sum" style="margin-bottom: 20px">
             <p class="totalrow"><%= @hrs_sum %> hours</p>
-        </div>
-    		<div id="entrytable">
-    			<%= render :partial => "entries/entries_table" %>
-    		</div>
-    		<div id="entrycalendar_sum" class="hidden">
-    			<p class="totalrow"><%= @cal_month_sum %> hours</p>
-    		</div>
-    		<div id="entrycalendar" class="hidden">
-    			<%= render :partial => "entries/entries_calendar" %>
-    		</div>
-    		<div id="entrytrends" class="hidden">
-    			<%= render :partial => "entries/entries_trends" %>
-    		</div>
-    	</div><!-- selectdetails -->	    
-	    
-	  </div> <!-- Details -->
-	
-	</div> <!-- Filter Data, Details -->
+          </div>
+
+          <div id="entrytable">
+      		  <%= render :partial => "entries/entries_table" %>
+      		</div>
+      		<div id="entrycalendar_sum" class="hidden">
+      			<p class="totalrow"><%= @cal_month_sum %> hours</p>
+      		</div>
+      		<div id="entrycalendar" class="hidden">
+      			<%= render :partial => "entries/entries_calendar" %>
+      		</div>
+      		<div id="entrytrends" class="hidden">
+      			<%= render :partial => "entries/entries_trends" %>
+      		</div>
+      	</div><!-- selectdetails -->	    
+  	  </div> <!-- View Details -->
+
+    </div>
+
+    <% end %>      
+
+
+      <!-- <div class="row"><div class="span3 borderleft utilization">
+        <fieldset>
+          <legend><%= @user.name %> - Utilization</legend>
+          <div class="row statusbar">
+            <div class="spanhalf"><p>Week</p></div>
+            <div class="span2 progress progress-striped progress-warning tips" 
+                  title="<%= @my_week_sum %>/<%= @workhours_week %>"><div class="bar" 
+                  style="width: <%= @utilization_week %>;"><p><%= @utilization_week %></p></div></div>
+          </div>
+          <div class="row statusbar">
+            <div class="spanhalf"><p>Month</p></div>
+            <div class="span2 progress progress-striped progress-warning tips" 
+                  title="<%= @my_month_sum %>/<%= @workhours_month %>"><div class="bar" 
+                  style="width: <%= @utilization_month %>;"><p><%= @utilization_month %></p></div></div>
+          </div>
+          <div class="row statusbar">
+            <div class="spanhalf"><p>Year</p></div>
+            <div class="span2 progress progress-striped progress-warning tips" 
+                  title="<%= @my_year_sum %>/<%= @workhours_year %>"><div class="bar" 
+                  style="width: <%= @utilization_year %>;"><p><%= @utilization_year %></p></div></div>
+          </div>
+        </fieldset>
+      </div></div> -->
+
+
+
+	</div> <!-- Filter Data, Details --> 
+
+</div><!--/.container-fluid, row-->
+
+
+
     
-	<div class="span7">
+	<div class="span8">
 
 		<!-- LIST STAFFED EMPLOYEES -->
 		<h2 id="ProjectStaffCount">Staff - <%= @staff.count %> </h2>
 		<table class="table table-bordered table-condensed">
 		  <thead>
 		    <tr>	
-		      	<th><p>Employee</p></th>
+		      <th><p>Employee</p></th>
 			    <th><p>Rate</p></th>
 		      	<!-- <th><p>Start Date</p></th>
 		      	<th><p>End Date</p></th> -->
@@ -138,10 +149,10 @@
 		  </tbody>
 		</table>
 	
-		<h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
-		<% @prev_month_entries.each do |e| %>
-			<p><%= e.user.name %> - <%= e.hours_sum %></p>
-		<% end %>
+    <!-- <h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
+    <% @prev_month_entries.each do |e| %>
+      <p><%= e.user.name %> - <%= e.hours_sum %></p>
+    <% end %> -->
 	</div>
 	
 </div></div><!--/.container-fluid, row-->
