--- a/app/views/users/_filterlist.html.erb
+++ b/app/views/users/_filterlist.html.erb
@@ -1,5 +1,5 @@
 <% @employees.each do |u| %>
-	<label>
+	<label class="span2">
 	  <%= check_box(:filter, :employees, {:multiple => true, :checked => @filter_employees.include?(u[3].to_s)}, u[3], nil)%>
 	  <span class="tips" id="filter_employees_<%= u[3] %>_text" title="<%= u[2] %> total hours"> <%= link_to u[0], user_path(u[3]) %> </span>
   </label>
